# drf-react-boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  docker-compose.yml
backend/: .isort-cfg  Dockerfile  manage.py  pyproject.toml
backend/src/settings/: settings.py
docker/: dev-entrypoint.sh
frontend/: Dockerfile  package.json  tsconfig.json
frontend/src/: App.tsx
nginx/: nginx.conf
