[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
djangorestframework = "^3.12.4"
python-decouple = "^3.5"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
